Se agrego boton a la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -82,13 +82,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contacto</a>
                         </li>
-                        <li class="nav-item"></li>
-                            <button class="btn btnRegistro">Registrate</button>
-                        </li>
                     </ul>
+                    
                 </div>
         
             </div>
+            <button class="btnRegistro">Registrate</button>
         </nav>
 
     <!-- ***************** Fin Barra de navegacion ********************-->
