Se agrego responsive para conocenos

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="#conocenos">Conocenos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Screenshot</a>
+                            <a class="nav-link" href="#">Screenshots</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Paquetes</a>
