Inicio de sesion correcto

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
             <div class="banner_izquierda"> 
                 <form class="box" method="POST" action="controlador/landing/validar_usuario.php">
                     <h1>Iniciar Sesión</h1>
-                    <p class="text-muted"> </p> <input type="text" name="correo" id="correo" placeholder="Correo"> <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña"> <input type="submit" name="" value="Login" href="#">
+                    <p class="text-muted"> </p> <input type="text" name="correo" id="correo" placeholder="Correo"> 
+                    <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña"> 
+                    <input type="submit" name="" value="Login" href="#">
                     <div class="inicio col-md-12">
                       <div id="my-signin2"></div>
                     </div>
