--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <a class="nav-link" href="#contacto">Contacto</a>
                         </li>
                     </ul>
-                    <button class="btnRegistro"><a href="vista/registro.html">Registrate</a></button>
+                    <button class="btnRegistro"><a href="vista/registro.php">Registrate</a></button>
                 </div>
         
             </div>
